	PR c++/33324 	* init.c (build_new_1):  Use POINTER_PLUS_EXPR instead of MINUS_EXPR 	to calculate cookie_ptr.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128312 138bc75d-0d04-0410-961f-82ee72b054a4